# test_git-fossdev

./: Makefile  docker-compose.yaml  script.py  test.py
demo-pratice/: Makefile
discount_service/: pyproject.toml
discount_service/src/app/: main.py  settings.py
docs_domain/: Makefile
docs_domain/docs/source/: QUICKSTART.md  USAGE.rst  conf.py  index.rst
docs_domain/src/: sales.py
docs_domain/tests/: test_sales.py
makeutil/capp/: Makefile  app  main.cpp
order_service/: Dockerfile  pyproject.toml
order_service/src/app/: database.py  main.py  settings.py
product_service/: Makefile  pyproject.toml
testing/frameworks/: setup.py
testing/frameworks/src/tax/: income.py
testing/frameworks/tests/tax/: __test_income.py  test_income_pytest.py  test_income_unittest.py
testing/principle/: setup.py
testing/principle/src/: math_demo.py
testing/principle/tests/: test_principles.py
testing/tdd/: Makefile  setup.py
testing/tdd/src/: ndfl.py
testing/tdd/tests/: test_basic_ndfl.py
