[project]
name = "discount-service"
version = "0.1.0"
description = "Discount processing service"
authors = [
    {name = "Dest1n640",email = "realmadridfunca@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
