[tool.poetry]
name = "order-service"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
psycopg = {extras = ["binary"], version = "^3.1.18"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
